# DS18S20Library

./: CMakeLists.txt  CRCgen.h  INSTALL  LICENSE  Makefile  OWcomm.c  README  README.md  avr8_toolchain.cmake  config.h  delay.c  ds18S20.c  ds18S20.h
doc/html/: CRCgen_8c.html  CRCgen_8h.html  CRCgen_8h_source.html  OWcomm_8c.html  OWcomm_8h.html  OWcomm_8h_source.html  README_8dox.html  README_8md.html  annotated.html  classes.html  config_8h.html  config_8h_source.html  delay_8c.html  delay_8h.html  delay_8h_source.html  ds18S20_8c.html  ds18S20_8h.html  ds18S20_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__DS18B20Conf.html  group__DS18S20FuncCmd.html  group__DS18S20ROMCmd.html  group__DS18S20func.html  group__OneWire.html  group__libMacros.html  group__time.html  index.html  md_README.html  menudata.js  modules.html  pages.html  structSDS18S20.html  (+1 more)
example/: CRCgen.c  DS18B20example1.c  DS18B20example2.c  DS18B20example3.c  DS18S20example1.c  Makefile  OWcomm.c  OWcomm.h  README  UART.c  UART.h  delay.h  ds18S20.h  libDS18S20example.c  main.c
example/hardware/: DS18B20example3.sch  DS18B20exampleSerial.sch  LICENSE  README_HARDWARE
translations/: README_mk.md
